<resources>
    <string name="app_name">Ticket Control</string>
    <string name="pais">Country</string>
    <string name="aereo">Flight</string>
    <string name="rodoviario">Road</string>
    <string name="possui_bagagem">Baggage purchased</string>
    <string name="data_ida">Departure</string>
    <string name="data_volta">Arrival</string>
    <string name="salvar">Save</string>
    <string name="limpar">Clear Selection</string>
    <string name="destino_em_branco">Destiny can\'t be blank!</string>
    <string name="data_ida_em_branco">Departure date cannot be blank!</string>
    <string name="data_volta_em_branco">Arrival date cannot be blank!</string>
    <string name="selecionar_tipo_transporte">You need to select the type of transport!</string>
    <string name="selecione_pais">Select the country</string>
    <string name="brasil">Brazil</string>
    <string name="alemanha">Germany</string>
    <string name="argentina">Argentina</string>
    <string name="canada">Canada</string>
    <string name="china">China</string>
    <string name="espanha">Espain</string>
    <string name="eua">United States</string>
    <string name="italia">Italy</string>
    <string name="japao">Japan</string>
    <string name="mexico">Mexico</string>
    <string name="russia">Russia</string>
    <string name="selecione_pais_destino">Select Destination Country</string>
    <string name="cidade">City</string>
    <string name="selecione_o_pais_que_ira_viajar">Select the country you will travel to!</string>
    <string name="dados_salvos_com_sucesso">Data saved successfully!</string>
    <string name="os_campos_foram_limpos">The fields have been cleared!</string>
    <string name="passagem_para">Ticket to</string>
    <string name="no">at the</string>
    <string name="foi_clicado">was clicked!</string>
    <string name="curitiba">Curitiba</string>
    <string name="vancouver">Vancouver</string>
    <string name="new_york">Nova York</string>
    <string name="rj">Rio de Janeiro</string>
    <string name="roma">Rome</string>
    <string name="traco">" - "</string>
    <string name="carlos_eduardo_rosa_portella">Carlos Eduardo Rosa Portella</string>
    <string name="sobre">Aboult</string>
    <string name="adicionar">Add</string>
    <string name="autor">Author:</string>
    <string name="email_carlos">carlosportella16@hotmail.com</string>
    <string name="email">E-mail:</string>
    <string name="dados_app">The application was designed to manage your tickets, so you can register your trips and specific data.</string>
    <string name="pos_java">Post Graduation in Java Development</string>
    <string name="curso">Course:</string>
    <string name="nova_passagem">New Ticket</string>
    <string name="alterar_passagem">Change Ticket</string>
    <string name="alterar">Change</string>
    <string name="excluir">Delete</string>
    <string name="controle_de_passagens">Ticket Control</string>
    <string name="bagagem_comprada">Baggage purchased</string>
    <string name="sem_bagagem">No baggage</string>
    <string name="exibir_por">Sort by:</string>
    <string name="country">County</string>
</resources>